Ensure logo is always visible on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body{
 .header {
     text-align: center;
     font-size: 0;
+    direction: rtl;
 }
 .wrapper{
     background-color:#010500;
